--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-/* #root {
+#root {
+  font-family: "Pretendard";
+  font-weight : normal;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-} */
+}
